# GPT

./: .gitignore  README.md  pyproject.toml
data/: test.txt  train.txt  val.txt
models/: tokenizer.json  tokenizer.pt
src/miniGPT/models/: GPT.py
src/miniGPT/scripts/: prepare_data.py
src/mini_gpt/: inference.py  test.py  train.py
src/mini_gpt/configs/: __init__.py  inference_config.py  test_config.py  train_config.py
src/mini_gpt/datasets/: batch_operators.py  dataset.py
src/mini_gpt/inference/: __init__.py  queued_text.py
src/mini_gpt/models/: GPT.py  blocks.py  layers.py
src/mini_gpt/scripts/: prepare_data.py
