[tool.poetry]
name = "mini-gpt"
version = "0.1.0"
description = "A minimal implementation of GPT"
authors = ["lorenzocollodi <lorenzocollodi@gmail.com>"]
packages = [{ include = "mini_gpt", from = "src" },]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
transformers = "^4.38.2"
datasets = "^2.18.0"
tiktoken = "^0.6.0"
wandb = "^0.16.4"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
